[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/entities/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/enemies/SpecterEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
enemy_type = "specter"
speed = 100

[node name="CollisionShape2D" parent="." index="1"]
disabled = true

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 1 )

[node name="ChargeChoiceTimer" type="Timer" parent="." index="4"]
wait_time = 2.2
autostart = true

[node name="ChargeTimer" type="Timer" parent="." index="5"]
wait_time = 0.25
one_shot = true

[node name="AttackTimer" type="Timer" parent="." index="6"]
wait_time = 1.3
one_shot = true
[connection signal="timeout" from="ChargeChoiceTimer" to="." method="_on_ChargeChoiceTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[editable path="HurtBox"]
